--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#f2f2f2",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle":"black",
     "onReachBottomDistance":50
