--- a/app.json
+++ b/app.json
@@ -2,7 +2,6 @@
   "pages": [
     "pages/index/index",
     "pages/goods-details/index",
-    "pages/shop-cart/index",
     "pages/to-pay-order/index",
     "pages/select-address/index",
     "pages/address-add/index",
@@ -44,7 +43,7 @@
         "text": "餐具"
       },
       {
-        "pagePath": "pages/shop-cart/index",
+        "pagePath": "pages/order-list/index",
         "iconPath": "images/nav/order-off.png",
         "selectedIconPath": "images/nav/order-on.png",
         "text": "订单"
