--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "pages/select-address/index",
     "pages/address-add/index",
     "pages/order-list/index",
+    "pages/order-my/index",
     "pages/order-details/index",
     "pages/my/index",
     "pages/tableware/index",
