--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "pages/goods-details/index",
     "pages/to-pay-order/index",
     "pages/select-address/index",
+    "pages/contact-us/index",
     "pages/address-add/index",
     "pages/order-list/index",
     "pages/order-my/index",
