--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/order-my/index",
     "pages/address-add/index",
     "pages/index/index",
     "pages/goods-details/index",
@@ -7,8 +8,6 @@
     "pages/select-address/index",
     "pages/contact-us/index",
 
-    "pages/order-list/index",
-    "pages/order-my/index",
     "pages/order-details/index",
     "pages/my/index",
     "pages/tableware/index",
@@ -60,5 +59,6 @@
   },
   "navigateToMiniProgramAppIdList": [
     "wx0db38963938fe329"
-  ]
+  ],
+  "sitemapLocation": "sitemap.json"
 }
