--- a/project.config.json
+++ b/project.config.json
@@ -11,7 +11,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
-	"appid": "wxfcc24a29b3ff5f57",
+	"appid": "wx0db38963938fe329",
 	"projectname": "%E6%B4%81%E9%9B%85%E5%BA%B7",
 	"scripts": {},
 	"simulatorType": "wechat",
