--- a/project.config.json
+++ b/project.config.json
@@ -1,18 +1,19 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
 		"autoAudits": false,
-		"uglifyFileName": true
+		"uglifyFileName": true,
+		"checkInvalidKey": true
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
 	"appid": "wx0db38963938fe329",
-	"projectname": "%E6%B4%81%E9%9B%85%E5%BA%B7",
+	"projectname": "jieyakang-miniprogram",
 	"scripts": {},
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
