组件化商品列表，完成首页和餐具页，完成联系我们页数据完善

--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "pages/contact-us/index",
     "pages/order-details/index",
     "pages/my/index",
-    "pages/authorize/index"
+    "pages/authorize/index",
+    "pages/banner-detail/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
