--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
-	"appid": "wx0db38963938fe329",
+	"appid": "wxfcc24a29b3ff5f57",
 	"projectname": "jieyakang-miniprogram",
 	"scripts": {},
 	"simulatorType": "wechat",
