--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "pages": [
+    "pages/index/index",
+
     "pages/my/index",
 
     "pages/staff-action/index",
-    "pages/index/index",
     "pages/to-pay-order/index",
     "pages/shop-cart/index",
     "pages/select-address/index",
@@ -73,6 +74,7 @@
     "van-cell": "@vant/weapp/cell/index",
     "van-cell-group": "@vant/weapp/cell-group/index",
     "van-radio": "@vant/weapp/radio/index",
-    "van-radio-group": "@vant/weapp/radio-group/index"
+    "van-radio-group": "@vant/weapp/radio-group/index",
+    "van-loading": "@vant/weapp/loading/index"
   }
 }
