--- a/app.json
+++ b/app.json
@@ -1,10 +1,13 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/addRecord/index",
+
+    "pages/staff-action/index",
+
 
     "pages/my/index",
 
-    "pages/staff-action/index",
     "pages/to-pay-order/index",
     "pages/shop-cart/index",
     "pages/select-address/index",
@@ -75,6 +78,10 @@
     "van-cell-group": "@vant/weapp/cell-group/index",
     "van-radio": "@vant/weapp/radio/index",
     "van-radio-group": "@vant/weapp/radio-group/index",
-    "van-loading": "@vant/weapp/loading/index"
+    "van-loading": "@vant/weapp/loading/index",
+    "van-tab": "@vant/weapp/tab/index",
+    "van-tabs": "@vant/weapp/tabs/index",
+    "van-row": "@vant/weapp/row/index",
+    "van-col": "@vant/weapp/col/index"
   }
 }
